--- a/mayang/index.html
+++ b/mayang/index.html
@@ -33,7 +33,6 @@
     <!-- start navbar -->
     <nav class="navbar navbar-expand-lg bg-dark sticky-top" style="opacity: 0.8;">
         <div class="container">
-          <a class="navbar-brand" href="#">Navbar</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
           </button>
@@ -43,10 +42,10 @@
                 <a class="nav-link active text-light" aria-current="page" href="#">Home</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Features</a>
+                <a class="nav-link text-light" href="#aboutus">Tentang Kami</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link text-light" href="#">Pricing</a>
+                <a class="nav-link text-light" href="#product">Produk Kami</a>
               </li>
             </ul>
           </div>
@@ -99,16 +98,20 @@
       <!-- start about usss -->
        <div class="container">
 
-        <div class="container mt-5 mb-5 border-bottom border-4 border-black">
+        <div class="container mt-5 mb-5 border-bottom border-4 border-black" id="aboutus">
 
           <h3 class="text-center">Tentang Kami</h3>
 
           <p class="text-center">
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Natus consequatur itaque omnis suscipit velit aspernatur deserunt. Sapiente, molestiae impedit suscipit modi eum possimus. Repellat impedit qui est voluptatibus? Quas, quam.
-            Repellendus eius laborum obcaecati eos deserunt assumenda asperiores eveniet aperiam quisquam aliquid. Optio reiciendis fugiat saepe eaque nulla commodi minus? Aliquam natus, dignissimos eum amet minus unde culpa? Consequatur, odio.
-            Eveniet, ex dolor, cumque id necessitatibus fuga iusto enim officiis corporis, velit ut vitae modi numquam possimus. Maxime, debitis. Ipsum vel aliquam ab. Ipsam neque ipsum earum voluptates perspiciatis quod.
-            Voluptate, illum consectetur adipisci enim natus dolores ducimus. Totam tempora quas provident, cupiditate ratione saepe vero id quibusdam natus fugit veritatis tempore accusantium eos! Doloribus eveniet est ut repellendus vel?
-            Consequuntur a quaerat natus doloremque, quibusdam eos ad rem similique, blanditiis voluptate expedita voluptates nam quo obcaecati quod necessitatibus voluptatem, aspernatur vero reiciendis quos! Harum similique voluptas labore expedita officia.
+            MayAccesories adalah toko aksesoris yang menghadirkan berbagai pilihan perhiasan dan aksesoris cantik untuk melengkapi gaya harianmu. Dari anting, cincin, gelang, hingga kalung, setiap produk kami dipilih dengan teliti untuk memastikan kualitas dan desain yang elegan namun tetap terjangkau.
+
+Kami percaya bahwa aksesoris bukan sekadar pelengkap, tapi cerminan dari kepribadian. Itulah sebabnya MayAccesories hadir untuk membantumu tampil percaya diri di setiap kesempatan, baik untuk acara formal, kasual, hingga hadiah istimewa untuk orang tercinta.
+
+🛍️ Produk handmade & import berkualitas
+🚚 Pengiriman cepat & aman ke seluruh Indonesia
+💬 Layanan ramah, fast response via WhatsApp & Instagram
+
+Temukan aksesoris favoritmu hanya di MayAccesories — “Beauty in Every Detail”
           </p>
         </div>
 
@@ -121,9 +124,7 @@
                 <div class="row container text-start w-75">
                     <h2 class="border-bottom border-black pb-2 border-4">Aksesoris Wanita</h2>
                     
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit cum repellat laborum maxime corrupti repudiandae delectus eius ducimus aperiam magnam ipsa error voluptas iusto fugit nostrum voluptatum voluptate, deleniti facilis.
-                        Deleniti praesentium, molestias illo exercitationem voluptatum modi vero, unde sequi vel blanditiis necessitatibus repellendus optio neque, hic harum. Qui nihil officiis hic. Id culpa exercitationem repellat quibusdam sit alias eius.
-                        Consequuntur sint eveniet, asperiores optio dicta, atque illo dignissimos maiores, facere blanditiis magnam! Iusto a quo culpa numquam ullam dicta voluptates vero unde debitis ea. Praesentium assumenda quae voluptatibus asperiores?</p>
+                    <p>Setiap wanita punya gaya unik, dan aksesoris adalah cara terbaik untuk mengekspresikannya. Aksesoris wanita hadir dalam berbagai desain, mulai dari yang minimalis hingga glamour, cocok untuk berbagai kesempatan — entah itu hangout, acara formal, atau sekadar ingin tampil cantik di rumah.</p>
         
                 </div>
             </div>
@@ -134,9 +135,7 @@
               <div class="row container text-end w-75">
                 <h2 class="border-bottom border-black pb-2 border-4">Aksesoris Pria</h2>
                 <p>
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit. Sit cum repellat laborum maxime corrupti repudiandae delectus eius ducimus aperiam magnam ipsa error voluptas iusto fugit nostrum voluptatum voluptate, deleniti facilis.
-                  Deleniti praesentium, molestias illo exercitationem voluptatum modi vero, unde sequi vel blanditiis necessitatibus repellendus optio neque, hic harum. Qui nihil officiis hic. Id culpa exercitationem repellat quibusdam sit alias eius.
-                  Consequuntur sint eveniet, asperiores optio dicta, atque illo dignissimos maiores, facere blanditiis magnam! Iusto a quo culpa numquam ullam dicta voluptates vero unde debitis ea. Praesentium assumenda quae voluptatibus asperiores?
+                  Aksesoris pria dirancang untuk menambah kesan elegan dan percaya diri. Terbuat dari material berkualitas seperti kulit, stainless steel, hingga batu alam, aksesoris ini cocok digunakan untuk aktivitas harian maupun acara formal.
                 </p>
               </div>
             </div>
@@ -154,7 +153,7 @@
       <!-- start about us -->
       <div class="container mt-4">
 
-        <h3 class="text-center">Produk Kami</h3>
+        <h3 class="text-center" id="product">Produk Kami</h3>
 
         <div class="row mt-3 d-flex justify-content-center">
           <!-- Card 1 -->
@@ -356,8 +355,12 @@
         <h6>Jam Buka</h6>
         <p>Setiap Hari: 09.00 - 21.00</p>
         <h6>Ikuti Kami</h6>
-        <a href="#" class="text-white me-2"><i class="bi bi-instagram"></i></a>
-        <a href="#" class="text-white"><i class="bi bi-facebook"></i></a>
+        <a href="https://www.instagram.com/mygkhrna/" class="text-white text-decoration-none me-2">
+          <img src="assets/ig-nobg.png" alt="" style="height: 65px; width: 65px;">
+        </a>
+        <a href="https://wa.me/628385985383" class="text-white text-decoration-none">
+          <img src="assets/wa-nobg.png" alt="" style="height: 65px; width: 65px;">
+        </a>
       </div>
     </div>
     <hr class="bg-light">
