--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -6,12 +6,12 @@
     <link rel="stylesheet" href="assets/style/navbar.css">
     <link rel="stylesheet" href="assets/style/image-slider.css">
     <link rel="stylesheet" href="assets/style/style.css">
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+    <link rel="stylesheet" href="assets/style/footer.css">
+    <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css">
     <!-- <link rel="stylesheet" href="assets/swiper/swiper-bundle.css"> -->
     <title>NataDeChocolate | nutt.a</title>
 </head>
-<body class="bg-danger">
-
+<body class="bg-light hero-image">
     <!-- start navbar -->
     <nav class="navbar-l glass-effect">
         <div class="logo-l">MySite</div>
@@ -24,14 +24,54 @@
         <div class="hamburger-l" id="hamburger-l">
           ☰
         </div>
-      </nav>
+    </nav>
     <!-- end navbar -->
-
+    
     <!-- start content -->
-     
+    <div class="row d-flex p-1 align-items-center" style="margin-left: 0px; margin-bottom: 0px; margin-right: 0px; margin-top: 30px; padding: 0px;">
+      <div class="row" style="width: 100%; padding-left: 100px;">
+
+        <!-- left side preview -->
+        <div class="col me-5 d-flex flex-column justify-content-end" style="width: 50%;">
+          <div class="row">
+            <h1 class="text-light" style="font-size: 65px;">Its Project title</h1>
+          </div>
+          <div class="row">
+            <div class="glass-effect p-2 text-light" style="border-radius: 10px; width: 100%;">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vitae quae architecto tempora, ullam vel obcaecati ducimus velit sequi nesciunt repellendus, quam fugiat possimus, in inventore nostrum quod hic explicabo.
+              its description
+            </div>
+          </div>
+          <div class="row mt-2">
+            <p class="btn btn-success" style="width: fit-content; border-radius: 30px;">it will be a category</p>
+          </div>
+        </div>
+
+        <!-- right side preview -->
+        <div class="col">
+          <img src="assets/images/shima rin freeze.jpg" alt="" style="border: 1px solid white; border-radius: 25px; height: auto; width: 100%;">
+        </div>
+
+        <div class="row">
+          <div class="col">
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis facilis labore eligendi sed quidem corrupti, modi molestiae, quo, libero minima architecto nesciunt blanditiis fuga dolores saepe ipsa. Ab, magnam quaerat?
+          </div>
+        </div>
+      </div>
+
+    </div>
+
     <!-- end content -->
+
+    <!-- footer start -->
+     <!-- <div class="footer">
+      footer
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni animi saepe rem commodi minus provident voluptatum et, aliquid consectetur delectus quos? Rem, ducimus ex reprehenderit porro officiis iusto suscipit commodi.
+     </div> -->
+     <!-- footer end -->
+
 <script src="assets/scripts/navbar.js"></script>
-<script src="assets/bootstrap/js/bootstrap.bundle.min.js"></script>
+<script src="../bootstrap/js/bootstrap.bundle.min.js"></script>
 <!-- <script src="assets/swiper/swiper-bundle.min.js"></script> -->
 </body>
 </html>
