renewing the porto

--- a/portofolio/tes.html
+++ b/portofolio/tes.html
@@ -237,6 +237,68 @@
   <p id="link2">link 4 Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quaerat veritatis, quam facilis sint fugiat quisquam, necessitatibus earum tempore laborum consequatur fuga saepe debitis! Fugit placeat, adipisci minima fuga quo nobis?</p>
 </div>
 
+<!-- template -->
+
+
+    <div class="row d-flex p-1 align-items-center" style="margin-left: 0px; margin-bottom: 0px; margin-right: 0px; margin-top: 30px; padding: 0px;">
+      <div class="row" id="previewSection" style="width: 100%; padding-left: 100px;">
+        <!-- left side preview -->
+        <div class="col me-5 d-flex flex-column justify-content-center" style="width: 50%;">
+          <div class="row">
+            <h1 class="text-light" style="font-size: 65px;">Its Project title</h1>
+          </div>
+          <div class="row">
+            <div class="glass-effect p-2 text-light" style="border-radius: 10px; width: 100%;">
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Deleniti vitae quae architecto tempora, ullam vel obcaecati ducimus velit sequi nesciunt repellendus, quam fugiat possimus, in inventore nostrum quod hic explicabo.
+              its description
+            </div>
+          </div>
+          <div class="row mt-2">
+            <p class="btn btn-success" style="width: fit-content; border-radius: 30px;">it will be a category</p>
+          </div>
+        </div>
+
+        <!-- right side preview -->
+        <div class="col" id="project-preview">
+          <img src="assets/images/shima rin.jpg" alt="" style="border: 1px solid white; border-radius: 25px; height: auto; max-width: 100%;">
+        </div>
+
+        <!-- card slider -->
+        
+      </div>
+      <div class="row mt-3">
+          <div class="col-12">
+            <div class="scroll-container" id="scroll-container">
+              <div id="image1">
+                <img class="img-items" onclick="scrollingContent('image1')" src="assets/images/altair stand.jpg" alt="">
+              </div>
+              <div id="image2">
+                <img class="img-items" onclick="scrollingContent('image2')" src="assets/images/altair.jpg" alt="">
+              </div>
+              <div id="image3">
+                <img class="img-items" onclick="scrollingContent('image3')" src="assets/images/cool shima rin.jpg" alt="">
+              </div>
+              <div id="image4">
+                <img class="img-items" onclick="scrollingContent('image4')" src="assets/images/shima rin fishing.jpg" alt="">
+              </div>
+              <div id="image5">
+                <img class="img-items" onclick="scrollingContent('image5')" src="assets/images/shima rin freeze.jpg" alt="">
+              </div>
+              <div id="image6">
+                <img class="img-items" onclick="scrollingContent('image6')" src="assets/images/shima rin.jpg" alt="">
+              </div>
+              <div id="image7">
+                <img class="img-items" onclick="scrollingContent('image7')" src="assets/images/vlcsnap-2024-04-01-14h31m07s733.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+    </div>
+
+<!-- end template -->
+
+
+
 <script>
 
   function scrollingContent(tid){
