--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="assets/style/image-slider.css">
     <link rel="stylesheet" href="assets/style/style.css">
     <link rel="stylesheet" href="assets/style/footer.css">
+    <link rel="stylesheet" href="assets/style/animation.css">
     <!-- <link rel="stylesheet" href="../bootstrap/css/bootstrap.min.css"> -->
     <!-- <link rel="stylesheet" href="assets/swiper/swiper-bundle.css"> -->
     <title>NataDeChocolate | nutt.a</title>
@@ -37,26 +38,13 @@
         object-position: top;
       }
 
-      .fade-in {
-        animation: fadeIn 0.5s ease-in-out;
-      }
-
-      @keyframes fadeIn {
-        from {
-          opacity: 0;
-        }
-        to {
-          opacity: 1;
-        }
-      }
-
     </style>
 
 </head>
-<body id="super-component">
+<body id="super-component" onload="imageChange()">
     <!-- start navbar -->
     <nav class="navbar-l glass-effect">
-        <div class="logo-l">MySite</div>
+        <div class="logo-l">nutt.a</div>
         <ul class="nav-links-l" id="navLinks-l">
           <li><a href="#home" class="nav-link-l">Home</a></li>
           <li><a href="#about" class="nav-link-l">About</a></li>
@@ -73,7 +61,7 @@
     
     <div class="flex-container row" style="margin-bottom: 20px; height: 100vh; width: 100%;">
       <!-- name -->
-      <div class="flex-container col" style="flex: 1; height: 100%;">
+      <div class="flex-container col" id="hero-name" style="flex: 1; height: 100%;">
         <h1 class="column-text-direction text-heading" style="color: #ffe135;">
           <span>natade</span> <br>
           <span>chocolate</span>
@@ -84,17 +72,22 @@
       </div>
 
       <!-- image prev -->
-      <div class="flex-container col" style="flex: 9;">
-        <div class="hero-section-image" style="overflow: hidden;">
+      <div class="flex-container col" id="heroId" style="flex: 9;">
+        <div class="hero-section-image fade-in" style="overflow: hidden;">
 
-          <div class="hero-overlay-component">
-            <div class="glass-effect">
-              <h1>keren</h1>
+          <div class="hero-overlay-component d-none" id="project-info" style="padding: 0 25px;">
+            <div class="" style="width: fit-content; color: black; background-color: #ffe135; border-radius: 15px; padding: 5px;">
+              <h1 id="p-info-heading"></h1>
+            </div>
+            <div class="glass-effect" id="p-info-detail">
+              <p></p>
             </div>
           </div>
+
+          <div class="hero-overlay-component progress-bar" id="progress-bar" style="height: 1%; background-color: blue; ">
+          </div>
           
-          <img class="image-preview" id="image-prev" src="assets/images/shima rin fishing.jpg" alt="">
-          <img src="assets/images/vlcsnap-2024-04-01-14h31m07s733.png" alt="" class="image-preview">
+          <img class="image-preview" id="image-prev" src="" alt="">
         </div>
       </div>
     </div>
@@ -103,9 +96,17 @@
 
     <div class="element-container">
 
-      <div class="flex-container row" style="background-color: blue;">
-        <div class="flex-container col" style="background-color: azure; flex: 8;">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Neque veniam tempore nesciunt dolores at. Labore quas vero fuga eos recusandae ipsum eum necessitatibus quo voluptate neque, pariatur animi, omnis libero.
+      <div class="flex-container row">
+        <div class="flex-container col" style="flex: 8; width: 100%; padding:18px ;justify-content: space-between; align-items: center;">
+          <div style="background-color: red;">
+            content 1
+          </div>
+          <div style="background-color: green;">
+            content 2
+          </div>
+          <div style="background-color: blue;">
+            content 3
+          </div>
         </div>
         <div class="flex-container col" style="background-color: aqua; flex: 2;">
           Lorem, ipsum dolor sit amet consectetur adipisicing elit. Maxime, aperiam dolorem voluptate modi eveniet deleniti molestiae fugit esse quos eius inventore dignissimos perferendis aliquam quisquam obcaecati hic repellendus? Alias, odio!
@@ -134,6 +135,7 @@
      <!-- footer end -->
 
 <script src="assets/scripts/navbar.js"></script>
+<script src="assets/scripts/animation_handler.js"></script>
 <!-- <script src="../bootstrap/js/bootstrap.bundle.min.js"></script> -->
 <script>
 
