--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -16,6 +16,32 @@
 </head>
 <body id="super-component" onload="imageChange()">
     <!-- start navbar -->
+
+    <div class="flex-container row" id="splash" style="justify-content: center; align-items: center; width: 100%; height: 100vh;">
+      <h1 style="line-height: 1em; font-size: 10vh; letter-spacing: -0.14em;">
+        <div class="title1">
+          <span>N</span>
+          <span>A</span>
+          <span>T</span>
+          <span>A</span>
+          <span>D</span>
+          <span>E</span>
+        </div> 
+        <div class="title2">
+          <span>C</span>
+          <span>H</span>
+          <span>O</span>
+          <span>C</span>
+          <span>O</span>
+          <span>L</span>
+          <span>A</span>
+          <span>T</span>
+          <span>E</span>
+        </div>
+      </h1>
+    </div>
+
+    <div style="display: none;">
     <nav class="navbar-l glass-effect">
         <div class="logo-l">nutt.a</div>
         <ul class="nav-links-l" id="navLinks-l">
@@ -72,27 +98,27 @@
       <div class="flex-container row" style="margin-top: 80px; height: 100%;">
         <div class="flex-container col information-parent-items" style="flex: 8; justify-content: end;">
 
-          <div class="flex-container col" style="width: 90%; height: 100%; align-items: start; justify-content: center; position: relative; padding: 10px;">
-            <div class="flex-container" style="background-color: black; height: 50%; align-items: center; width: 100%;">
-              <h1>Englis Project : upcoming!</h1>
+          <div class="flex-container col information-parent-items-style">
+            <div class="flex-container information-parent-items-child-style">
+              <h1 class="fs-6">Englis Project : upcoming!</h1>
             </div>
             <div style="position: absolute; top: 0; margin-top: 30px;">
               <h2>2021.07.05</h2>
             </div>
           </div>
           
-          <div class="flex-container col" style="width: 90%; height: 100%; align-items: start; justify-content: center; position: relative; padding: 10px;">
-            <div class="flex-container" style="background-color: black; height: 50%; align-items: center; width: 100%;">
-              <h1>Englis Project : upcoming!</h1>
+          <div class="flex-container col information-parent-items-style">
+            <div class="flex-container information-parent-items-child-style">
+              <h1 class="fs-6">Englis Project : upcoming!</h1>
             </div>
             <div style="position: absolute; top: 0; margin-top: 30px;">
               <h2>2021.07.05</h2>
             </div>
           </div>
 
-          <div class="flex-container col" style="width: 90%; height: 100%; align-items: start; justify-content: center; position: relative; padding: 10px;">
-            <div class="flex-container" style="background-color: black; height: 50%; align-items: center; width: 100%;">
-              <h1>Englis Project : upcoming!</h1>
+          <div class="flex-container col information-parent-items-style">
+            <div class="flex-container information-parent-items-child-style">
+              <h1 class="fs-6">Englis Project : upcoming!</h1>
             </div>
             <div style="position: absolute; top: 0; margin-top: 30px;">
               <h2>2021.07.05</h2>
@@ -109,7 +135,7 @@
       </div>
 
       <!-- it will be about -->
-      <div class="flex-container row" style="padding: 25px; margin-top: 180px;">
+      <div class="flex-container row" style="padding: 50px; margin-top: 180px;">
         <div class="flex-container col" style="flex: 1; align-items: center;">
           <h1 class="column-text-direction text-heading" style="color: #ffe135;">
             <span>about</span>
@@ -118,11 +144,20 @@
         <div class="flex-container col" style="align-items: center; justify-content: start; flex: 4;">
           <img class="rounded-image" src="assets/images/shima_rin_freeze.jpg" alt="">
         </div>
-        <div class="flex-container col" style="flex: 4; background-color: #ffe135; text-align: justify; font-size: 20px;">
+        <div class="flex-container col" style="flex: 4; text-align: justify; font-size: 20px;">
+          <div class="flex-container row">
+            <div class="flex-container row">
+              <h1>
+                <span>NataDe</span> <br>
+                <span>Chocolate</span>
+              </h1>
+            </div>
+            <div class="flex-container row" style="align-items: end; justify-content: end;padding: 10px; width: 100%;">
+              <h3>nutt.a</h3>
+            </div>
+          </div>
           <div>
-            Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum enim eveniet est at ab deserunt excepturi repellat molestiae, unde ullam hic aut obcaecati eos iure ipsam odio nihil dignissimos soluta?
-            Amet voluptates a asperiores aut ipsam ratione praesentium, consequuntur cupiditate cumque aspernatur quis! Sequi voluptatibus ad, iusto delectus aperiam consequuntur aspernatur beatae voluptas vitae rem? Quos ex labore aperiam sequi.
-            Laborum quisquam atq
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Quis, corrupti? Odio culpa dolorem iusto dolore voluptates dolores, harum esse quibusdam labore rerum alias error rem, deleniti itaque adipisci nesciunt ipsam!
           </div>
         </div>
       </div>
@@ -139,7 +174,7 @@
         </ul>
      </div>
      <!-- footer end -->
-
+</div>
 <script src="assets/scripts/navbar.js"></script>
 <script src="assets/scripts/animation_handler.js"></script>
 <!-- <script src="../bootstrap/js/bootstrap.bundle.min.js"></script> -->
