update splash animasi

--- a/portofolio/index.html
+++ b/portofolio/index.html
@@ -19,7 +19,7 @@
 
     <div class="flex-container row" id="splash" style="justify-content: center; align-items: center; width: 100%; height: 100vh;">
       <h1 style="line-height: 1em; font-size: 10vh; letter-spacing: -0.14em;">
-        <div class="title1">
+        <div class="title1" id="title1">
           <span>N</span>
           <span>A</span>
           <span>T</span>
@@ -27,7 +27,7 @@
           <span>D</span>
           <span>E</span>
         </div> 
-        <div class="title2">
+        <div class="title2" id="title2">
           <span>C</span>
           <span>H</span>
           <span>O</span>
@@ -41,7 +41,7 @@
       </h1>
     </div>
 
-    <div style="display: none;">
+    <div class="d-none" id="realcontent">
     <nav class="navbar-l glass-effect">
         <div class="logo-l">nutt.a</div>
         <ul class="nav-links-l" id="navLinks-l">
